# flexcore_cl

./: .gitmodules  CMakeLists.txt
tests/: CMakeLists.txt  cl_helper.h  hello_world.cpp  kernels.cl
